# file_service

./: Cargo.toml  Makefile  README.md  serverless.yml
src/: http_handler.rs
src/application/ports/: file_storage_port.rs  mod.rs
src/application/use_cases/: delete_file_use_case.rs  get_download_url_use_case.rs  get_upload_url_use_case.rs  mod.rs
src/domain/value_objects/: api_response.rs  error.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/adapters/: mod.rs  s3_file_storage.rs
src/infrastructure/bootstrap/: app_state.rs  mod.rs
src/infrastructure/http/: auth_header_extractor.rs  file_routes.rs  mod.rs
