[package]
name = "file_service"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.0"
axum = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["macros"] }

async-trait = "0.1"

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = "0.1"

[[bin]]
name = "http_handler"
path = "src/http_handler.rs"
